// import 'package:get/get.dart';
//
// class Dictionary extends Translations {
//   @override
//   Map<String, Map<String, String>> get keys => {
//         'en_US': {
//           'Salak': 'Salak',
//           'Pisang': 'Banana',
//           'Anggur': 'Grape',
//           'Kangkung': 'Water Spinach',
//           'Kacang Panjang': 'Yardlong beans',
//           'Pir': 'Pear',
//           'Bayam': 'Spinach',
//           'Brokoli': 'Broccoli',
//           'Cabai': 'Chili',
//           'Daun Singkong': 'Cassava Leaves',
//           'Timun': 'Cucumber',
//           'Daun Pepaya': 'Papaya Leaf',
//           'Kobis': 'Cabbage',
//           'Nanas': 'Pineapple',
//           'Semangka': 'Watermelon',
//           'Apel': 'Apple',
//           'Durian': 'Durian',
//           'Pepaya': 'Papaya',
//           'Wortel': 'Carrot',
//           'Jeruk': 'Orange',
//         },
//         'id_ID': {
//           'Change Language': 'Ganti Bahasa',
//           'en': 'ind',
//           'There is no data': 'Tidak ada data',
//           'Health': 'Kesehatan',
//           'Let\'s role-play, you only know about fruits and vegetables, other than greetings or unrelated questions about fruits or vegetables, you pretend not to know.':
//               'Ayo bermain peran, kamu hanya tahu tentang buah dan sayuran, selain sapaan atau pertanyaan yang tidak berkaitan dengan itu kamu berpura-pura tidak tahu.',
//           'You can\'t send multiple messages at a time':
//               'Anda tidak dapat mengirim beberapa pesan sekaligus',
//           'Please ask any questions about fruits or vegetables':
//               'Silakan tanyakan pertanyaan tentang buah atau sayuran',
//           'Let\'s role play, you become a fruit and vegetable expert, in addition to greetings and questions related to fruits and vegetables, answer "Sorry I don\'t understand, I only understand about fruits and vegetables". If the question is about fruits and vegetables, answer based on the context of the previous question as a reference.':
//               'Ayo bermain peran, anda menjadi ahli buah dan sayuran, selain sapaan dan pertanyaan yang berkaitan dengan buah dan sayuran, jawab "Maaf saya tidak mengerti, saya hanya mengerti mengenai buah dan sayuran". Jika pertanyaan mengenai buah dan sayuran maka jawab berdasarkan konteks pertanyaan sebelumnya sebagai referensi, pertanyan sebelumnya',
//           'questions to be answered': 'pertanyaan yang harus dijawab',
//           'Hello, I\'m NutriAI Bot': 'Hallo, saya NutriAI Bot',
//           'General Information': 'Informasi Umum',
//           'Characteristics': 'Karakteristik',
//           'Nutrition': 'Gizi',
//           'Benefits': 'Manfaat',
//           'List of general nutrition information for':
//               'Daftar informasi gizi umum untuk',
//           'Definition and benefits of consuming foods that contain':
//               'Pengertian dan manfaat mengkonsumsi makanan yang mengandung',
//           'Today\'s article recommendation': 'Rekomendasi artikel hari ini',
//           'See All': 'Lihat Semua',
//           'Category': 'Kategori',
//           'FRUIT': 'BUAH',
//           'VEGETABLE': 'SAYURAN',
//           'Welcome': 'Selamat Datang',
//           'Please login with your account': 'Silahkan masuk dengan akun anda',
//           'Login Successfully': 'Berhasil masuk',
//           'Sign in with Apple': 'Masuk dengan Apple',
//           'Sign in with Google': 'Masuk dengan Google',
//           'Logout Successfully': 'Berhasil keluar',
//           'Log Out': 'Keluar',
//           'account deleted successfully': 'Berhasil menghapus akun',
//           'Delete Account': 'Hapus Akun',
//           'Recommendation': 'Rekomendasi',
//           'Today\'s recommendation': 'Rekomendasi hari ini',
//           'SCAN NOW TO DETECT': 'PINDAI SEKARANG UNTUK',
//           'FRUITS AND VEGETABLES': 'MENDETEKSI BUAH DAN SAYURAN',
//           'GOOD MORNING': 'SELAMAT PAGI',
//           'GOOD AFTERNOON': 'SELAMAT SIANG',
//           'GOOD AFTERNOON,': 'SELAMAT SORE',
//           'GOOD EVENING': 'SELAMAT MALAM',
//           'January': 'Januari',
//           'February': 'Februari',
//           'March': 'Maret',
//           'April': 'April',
//           'May': 'Mei',
//           'June': 'Juni',
//           'July': 'Juli',
//           'August': 'Agustus',
//           'September': 'September',
//           'October': 'Oktober',
//           'November': 'November',
//           'December': 'Desember',
//           'Monday': 'Senin',
//           'Tuesday': 'Selasa',
//           'Wednesday': 'Rabu',
//           'Thursday': 'Kamis',
//           'Friday': 'Jumat',
//           'Saturday': 'Sabtu',
//           'Sunday': 'Minggu',
//           'Fruits and Vegetables': 'Buah dan Sayuran',
//           'Fruit': 'Buah',
//           'Vegetable': 'Sayuran',
//           'Data not found': 'Data tidak ditemukan',
//           'Search for Fruits or Vegetables': 'Cari Buah atau Sayuran',
//           'Oops, an error occurred': 'Ups, terjadi kesalahan',
//           'BACK': 'KEMBALI',
//           'No camera available': 'Tidak ada kamera tersedia',
//           'Scan fruits or vegetables': 'Pindai buah atau sayuran',
//           'Nutrients and minerals': 'Nutrisi dan mineral',
//           'Description': 'Deskripsi',
//           'No fruits/vegetables detected': 'Tidak ada buah/sayuran terdeteksi',
//           'Login': 'Masuk',
//           'Logout': 'Keluar',
//           'YES': '  YA  ',
//           'NO': 'TIDAK',
//           'SCAN': 'PINDAI',
//           'HOME': 'BERANDA',
//           'ARTICLE': 'ARTIKEL',
//           'ask about fruits or vegetables':
//               'Bertanya tentang buah atau sayuran',
//           'Benefits of consuming': 'Manfaat mengkosumsi',
//           'Theme': 'Tema',
//         }
//       };
// }
