...
                            // unselectedLabelColor: Colors.black,
                            labelColor: Theme.of(context).colorScheme.onPrimary,
                            tabs: [
                              Tab(
                                child: Text(l10n.fruit,
                                    // key: const Key('dark theme test'),
                                    key: const Key('fruit_tab'),
                                    style: TextStyle(
                                        fontSize: (Responsive.isMobile(context))
                                            ? 14
                                            : 20,
                                        fontWeight: FontWeight.w500)),
                              ),
                              Tab(
                                child: Text(l10n.vegetable,
                                    key: const Key('vegetable_tab'),
                                    style: TextStyle(
                                        fontSize: (Responsive.isMobile(context))
                                            ? 14
                                            : 20,
                                        fontWeight: FontWeight.w500)),
                              ),
...
